--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "type": "commonjs",
   "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx --watch src/server.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
@@ -19,9 +20,11 @@
   "dependencies": {
     "@prisma/client": "^6.12.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "prisma": "^6.12.0",
+    "tsx": "^4.20.3",
     "zod": "^4.0.5"
   }
 }
