--- a/package.json
+++ b/package.json
@@ -7,23 +7,31 @@
   "type": "commonjs",
   "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "tsx --watch src/server.ts"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.0.15",
+    "@types/slug": "^5.0.9",
+    "jest": "^30.0.5",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "bcrypt": "^6.0.0",
+    "bcrypt-ts": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.12.0",
+    "slug": "^11.0.0",
     "tsx": "^4.20.3",
     "zod": "^4.0.5"
   }
