--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
   "main": "server.ts",
   "scripts": {
     "test": "jest",
     "dev": "tsx --watch src/server.ts"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
     "@biomejs/biome": "2.1.2",
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
@@ -19,6 +20,7 @@
     "@types/node": "^24.0.15",
     "@types/slug": "^5.0.9",
     "jest": "^30.0.5",
+    "ts-jest": "^29.4.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
@@ -31,7 +33,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^6.12.0",
-    "slug": "^11.0.0",
+    "slugify": "^1.6.6",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "zod": "^4.0.5"
   }
